# zcore

./: README.md  SIMPLY_EXPLAINED.md  process_repeat_trials.py  pyproject.toml  train_coreset_model.py  zeroshot_coreset_selection.py
core/coreset/: model_embed.py  utils.py  zcore.py
core/train/: pruned_dataset.py  resnet.py  seed.py  train.py  train_utils.py
