[project]
name = "zcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiftyone>=1.1.0",
    "numpy>=2.2.0",
    "open-clip-torch>=2.29.0",
    "pickle-mixin>=1.0.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
